--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@/components/*": ["src/components/*"],
-      "@/components/ui/*": ["src/components/ui/*"]
+      "@/components/*": ["src/components/*"]
     }
   },
   "include": ["src"]
